<resources>
    <string name="app_name">芥末</string>
    <string name="version">v1.1.0</string>
    <string name="top1">首页</string>
    <string name="top2">行程</string>
    <string name="top3">手账</string>
    <string name="account">账号管理</string>
    <string name="security">安全设置</string>
    <string name="test">     Android是一种基于Linux的自由及开放源代码的操作系统，主要使用于移动设备，如智能手机和平板电脑，
        由Google公司和开放手机联盟领导及开发。尚未有统一中文名称，中国大陆地区较多人使用“安卓”或“安致”。
        Android操作系统最初由Andy Rubin开发，主要支持手机。2005年8月由Google收购注资。2007年11月，
        Google与84家硬件制造商、软件开发商及电信营运商组建开放手机联盟共同研发改良Android系统。随后
        Google以Apache开源许可证的授权方式，发布了Android的源代码。第一部Android智能手机发布于2008年10月。
        Android逐渐扩展到平板电脑及其他领域上，如电视、数码相机、游戏机等。2011年第一季度，Android在全球的市
        场份额首次超过塞班系统，跃居全球第一。 2013年的第四季度，Android平台手机的全球市场份额已经达到78.1%。[1]
        2013年09月24日谷歌开发的操作系统Android在迎来了5岁生日，全世界采用这款系统的设备数量已经达到10亿台。

        2012年1月6日，谷歌Android Market已有10万开发者推出超过40万活跃的应用，大多数的应用程序为免费。
        Android Market应用程序商店目录在新年首周周末突破40万基准，距离突破30万应用仅4个月。在2011年早些时候，
        Android Market从20万增加到30万应用也花了四个月。[6]
        2013年11月1日，Android4.4正式发布，从具体功能上讲，Android4.4提供了各种实用小功能，新的Android系统
        更智能，添加更多的Emoji表情图案，UI的改进也更现代，如全新的HelloiOS7半透明效果。
        2015年27日，网络安全公司Zimperium研究人员警告，安卓(Android)存在“致命”安全漏洞,黑客发送一封彩信便能在用户毫不知情的情况下完全控制手机
</string>
    <string name="tab_text_1">首页</string>
    <string name="tab_text_2">行程</string>
    <string name="tab_text_3">手账</string>
    <string name="mine">我的</string>
    <string name="action_settings">Settings</string>
    <string name="QQ">1271310565</string>
    <string name="weixin">Allo127</string>
    <string name="weibo">芥末官方微博</string>
    <string name="email">1271310565@qq.com</string>
</resources>
