<?xml version="1.0" encoding="utf-8"?>
<!--顶部导航栏-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal"
    android:background="@drawable/sk_tbg"
    android:tag="skin:sk_tbg:background">

    <Button
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/top1"
        android:textColor="@color/c_text"
        android:tag="skin:c_text:textColor"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/xingcheng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/top2"
        android:textColor="@color/c_text"
        android:tag="skin:c_text:textColor"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/shouzhang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/top3"
        android:textColor="@color/c_text"
        android:tag="skin:c_text:textColor"
        android:textSize="18sp"/>

</LinearLayout>
