<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <cn.edu.cdut.jiemo.diary.Top2View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:id="@+id/title_fragement"
        app:top2_text="关于我们"
        app:top2_color="#778899">
    </cn.edu.cdut.jiemo.diary.Top2View>
    <cn.edu.cdut.jiemo.mine.circleImageView
        android:id="@+id/appImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_fragement"
        android:layout_margin="10dp"
        android:src="@drawable/user_portrait"
        />
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appImage"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/version"
        app:layout_constraintTop_toBottomOf="@id/appName"
        />
    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appVersion"
        android:text="联系方式"/>

        <LinearLayout
            android:id="@+id/item_bottons"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/aboutUs"
            android:orientation="vertical">

            <cn.edu.cdut.jiemo.mine.personalItemActivity
                android:id="@+id/QQ_item"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                app:left_text="QQ"
                app:right_text="@string/QQ"
                android:layout_weight="1"
                app:left_icon="@drawable/aqq"/>

            <cn.edu.cdut.jiemo.mine.personalItemActivity
                android:id="@+id/weixin_item"
                app:left_text="微信"
                app:left_icon="@drawable/aweixin"
                android:layout_width="match_parent"
                android:layout_weight="1"
                app:right_text="@string/weixin"
                android:layout_height="0dp" />

            <cn.edu.cdut.jiemo.mine.personalItemActivity
                android:id="@+id/weibo_item"
                app:left_text="微博"
                android:layout_weight="1"
                app:left_icon="@drawable/aweibo"
                app:right_text="@string/weibo"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <cn.edu.cdut.jiemo.mine.personalItemActivity
                android:id="@+id/email_item"
                app:left_text="邮箱"
                android:layout_weight="1"
                app:right_text="@string/email"
                app:left_icon="@drawable/aemail"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
